리포맷 및 불필요 파일 삭제