@@ -26,6 +26,7 @@ import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import static com.example.bootproject.system.util.BindingResultUtil.extracted;
 
@@ -41,7 +42,7 @@ public class PostController {
     @PostMapping("/create")
     public ResponseEntity<? extends Object> createPost(@ModelAttribute @Valid postCreateDto dto, BindingResult result, HttpSession session) throws Exception {
         //질문글 생성 API 에 답글 데이터 요청 방지
-        if(dto.getParentId()!=null){
+        if (dto.getParentId() != null) {
             return ResponseEntity.badRequest().build();
         }
         extracted(result);
@@ -134,15 +135,15 @@ public class PostController {
     }
 
     @GetMapping("/download")
-    public ResponseEntity<Resource> downloadFile(@RequestParam Integer postId,@RequestParam(defaultValue = "1") int fileNum) throws IOException {
+    public ResponseEntity<Resource> downloadFile(@RequestParam Integer postId, @RequestParam(defaultValue = "1") int fileNum) throws IOException {
 
-        Resource resource = postService.loadFileAsResource(postId,fileNum);
-        if(resource==null){
+        Resource resource = postService.loadFileAsResource(postId, fileNum);
+        if (resource == null) {
             return ResponseEntity.noContent().build();
         }
         return ResponseEntity.ok()
                 .contentType(MediaType.APPLICATION_OCTET_STREAM)
-                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + URLEncoder.encode(resource.getFilename().split("_|\\.")[0]+'.'+resource.getFilename().split("_|\\.")[2],"UTF-8") + "\"")
+                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + URLEncoder.encode(resource.getFilename().split("_|\\.")[0] + '.' + resource.getFilename().split("_|\\.")[2], StandardCharsets.UTF_8) + "\"")
                 .body(resource);
     }
 
